// SPDX-FileCopyrightText: Copyright (c) 2025 Cisco and/or its affiliates.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package core.v1alpha1;

// Locator provides actual artifact locators for an agent data model.
// For example, this can include a reference to a helm chart.
//
// Key: {type}:{url}
//
// This is an immutable object.
message Locator {
  // Type of the locator
  LocatorType type = 1;
  // Location URI where this source can be found/accessed
  string url = 2;
  // Metadata associated with this locator
  map<string, string> annotations = 3;
  // Size of the source in bytes pointed by the `url` property
  optional uint64 size = 4;
  // Digest of the source pointed by the `url` property.
  // Specs: https://github.com/opencontainers/image-spec/blob/main/descriptor.md#digests
  optional string digest = 5;
}

// LocatorType collects supported types for locators
enum LocatorType {
  LOCATOR_TYPE_UNSPECIFIED = 0;
  LOCATOR_TYPE_HELM_CHART = 1;
  LOCATOR_TYPE_DOCKER_IMAGE = 2;
  LOCATOR_TYPE_PYTHON_PACKAGE = 3;
  LOCATOR_TYPE_SOURCE_CODE = 4;
  LOCATOR_TYPE_BINARY = 5;
}
